--- a/SDL-gsoc2010_IME.mediawiki
+++ b/SDL-gsoc2010_IME.mediawiki
@@ -5,7 +5,7 @@ http://hg.libsdl.org/SDL-gsoc2010_IME
 
 
 == Status ==
-""June 30, 2010""
+'''June 30, 2010'''
 I have decided to use an IMM implementation for the SoC.
 The TSF implementation is moving too slowly, I intend to complete it after the SoC.
 
