--- a/CategoryEndian.mediawiki
+++ b/CategoryEndian.mediawiki
@@ -16,6 +16,9 @@ Endianness comes in two forms - big and little.
 * SDL_LIL_ENDIAN means byte order is 1234, where the smaller (little) numbered position comes first
 * SDL_BIG_ENDIAN means byte order is 4321, where the larger (big) numbered position comes first
 
+SDL byte order corresponds to the byte order used by the processor type it was compiled for.
+* SDL byte order is SDL_LIL_ENDIAN for x86, x64, and similar systems that use the little endian byte order.
+* SDL byte order is SDL_BIG_ENDIAN for Mac, PowerPC, and similar systems that use the big endian byte order.
 
 
 == Functions ==
