--- a/SDL_Keycode.mediawiki
+++ b/SDL_Keycode.mediawiki
@@ -12,7 +12,7 @@ The SDL virtual key representation.
 |0
 |-
 |SDLK_RETURN
-|the Enter key on the main keyboard
+|the Enter key (main keyboard)
 |-
 |SDLK_ESCAPE
 |the Esc key
@@ -27,196 +27,196 @@ The SDL virtual key representation.
 |the space bar key(s)
 |-
 |SDLK_EXCLAIM
-|!
+|the ! key
 |-
 |SDLK_QUOTEDBL
-|"
+|the " key
 |-
 |SDLK_HASH
-|#
+|the # key
 |-
 |SDLK_PERCENT
-|%
+|the % key
 |-
 |SDLK_DOLLAR
-|$
+|the $ key
 |-
 |SDLK_AMPERSAND
-|&
+|the & key
 |-
 |SDLK_QUOTE
-|'
+|the ' key
 |-
 |SDLK_LEFTPAREN
-|(
+|the ( key
 |-
 |SDLK_RIGHTPAREN
-|)
+|the ) key
 |-
 |SDLK_ASTERISK
-|*
+|the * key
 |-
 |SDLK_PLUS
-|+
+|the + key
 |-
 |SDLK_COMMA
-|,
+|the , key
 |-
 |SDLK_MINUS
-|-
+|the - key
 |-
 |SDLK_PERIOD
-|.
+|the . key
 |-
 |SDLK_SLASH
-|/
+|the / key
 |-
 |SDLK_0
-|0
+|the 0 key
 |-
 |SDLK_1
-|1
+|the 1 key
 |-
 |SDLK_2
-|2
+|the 2 key
 |-
 |SDLK_3
-|3
+|the 3 key
 |-
 |SDLK_4
-|4
+|the 4 key
 |-
 |SDLK_5
-|5
+|the 5 key
 |-
 |SDLK_6
-|6
+|the 6 key
 |-
 |SDLK_7
-|7
+|the 7 key
 |-
 |SDLK_8
-|8
+|the 8 key
 |-
 |SDLK_9
-|9
+|the 9 key
 |-
 |SDLK_COLON
-|:
+|the : key
 |-
 |SDLK_SEMICOLON
-|;
+|the ; key
 |-
 |SDLK_LESS
-|<
+|the < key
 |-
 |SDLK_EQUALS
-|=
+|the = key
 |-
 |SDLK_GREATER
-|>
+|the > key
 |-
 |SDLK_QUESTION
-|?
+|the ? key
 |-
 |SDLK_AT
-|@
+|the @ key
 |-
 |SDLK_LEFTBRACKET
-|[
+|the [ key
 |-
 |SDLK_BACKSLASH
-|\
+|the \ key
 |-
 |SDLK_RIGHTBRACKET
-|]
+|the ] key
 |-
 |SDLK_CARET
-|^
+|the ^ key
 |-
 |SDLK_UNDERSCORE
-|_
+|the _ key
 |-
 |SDLK_BACKQUOTE
-|`
+|the ` key
 |-
 |SDLK_a
-|a
+|the a key
 |-
 |SDLK_b
-|b
+|the b key
 |-
 |SDLK_c
-|c
+|the c key
 |-
 |SDLK_d
-|d
+|the d key
 |-
 |SDLK_e
-|e
+|the e key
 |-
 |SDLK_f
-|f
+|the f key
 |-
 |SDLK_g
-|g
+|the g key
 |-
 |SDLK_h
-|h
+|the h key
 |-
 |SDLK_i
-|i
+|the i key
 |-
 |SDLK_j
-|j
+|the j key
 |-
 |SDLK_k
-|k
+|the k key
 |-
 |SDLK_l
-|l
+|the l key
 |-
 |SDLK_m
-|m
+|the m key
 |-
 |SDLK_n
-|n
+|the n key
 |-
 |SDLK_o
-|o
+|the o key
 |-
 |SDLK_p
-|p
+|the p key
 |-
 |SDLK_q
-|q
+|the q key
 |-
 |SDLK_r
-|r
+|the r key
 |-
 |SDLK_s
-|s
+|the s key
 |-
 |SDLK_t
-|t
+|the t key
 |-
 |SDLK_u
-|u
+|the u key
 |-
 |SDLK_v
-|v
+|the v key
 |-
 |SDLK_w
-|w
+|the w key
 |-
 |SDLK_x
-|x
+|the x key
 |-
 |SDLK_y
-|y
+|the y key
 |-
 |SDLK_z
-|z
+|the z key
 |-
 |SDLK_CAPSLOCK
 |the Caps Lock key
@@ -285,16 +285,16 @@ The SDL virtual key representation.
 |the Page Down key
 |-
 |SDLK_RIGHT
-|the Right arrow key (directional keypad)
+|the Right arrow key (navigation keypad)
 |-
 |SDLK_LEFT
-|the Left arrow key (directional keypad)
+|the Left arrow key (navigation keypad)
 |-
 |SDLK_DOWN
-|the Down arrow key (directional keypad)
+|the Down arrow key (navigation keypad)
 |-
 |SDLK_UP
-|the Up arrow key (directional keypad)
+|the Up arrow key (navigation keypad)
 |-
 |SDLK_NUMLOCKCLEAR
 |the Num Lock key (number keypad)
@@ -312,52 +312,49 @@ The SDL virtual key representation.
 |the Plus (+) key (number keypad)
 |-
 |SDLK_KP_ENTER
-|the Enter key on the number keypad
+|the Enter key (number keypad)
 |-
 |SDLK_KP_1
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_1)
+|the 1 key (number keypad)
 |-
 |SDLK_KP_2
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_2)
+|the 2 key (number keypad)
 |-
 |SDLK_KP_3
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_3)
+|the 3 key (number keypad)
 |-
 |SDLK_KP_4
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_4)
+|the 4 key (number keypad)
 |-
 |SDLK_KP_5
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_5)
+|the 5 key (number keypad)
 |-
 |SDLK_KP_6
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_6)
+|the 6 key (number keypad)
 |-
 |SDLK_KP_7
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_7)
+|the 7 key (number keypad)
 |-
 |SDLK_KP_8
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_8)
+|the 8 key (number keypad)
 |-
 |SDLK_KP_9
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_9)
+|the 9 key (number keypad)
 |-
 |SDLK_KP_0
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_0)
+|the 0 key (number keypad)
 |-
 |SDLK_KP_PERIOD
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_PERIOD)
-|-
-|
-|
+|the . key (number keypad)
 |-
 |SDLK_APPLICATION
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_APPLICATION)
+|the Application or Menu key (Windows keyboards)
 |-
 |SDLK_POWER
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_POWER)
+|the Power key (extended keypad)
 |-
 |SDLK_KP_EQUALS
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_EQUALS)
+|the = key (number keypad)
 |-
 |SDLK_F13
 |SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F13)
