update content (incomplete)

--- a/SDL_Keycode.mediawiki
+++ b/SDL_Keycode.mediawiki
@@ -375,25 +375,25 @@ The SDL virtual key representation.
 |the F18 key
 |-
 |SDLK_F19
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F19)
+|the F19 key
 |-
 |SDLK_F20
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F20)
+|the F20 key
 |-
 |SDLK_F21
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F21)
+|the F21 key
 |-
 |SDLK_F22
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F22)
+|the F22 key
 |-
 |SDLK_F23
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F23)
+|the F23 key
 |-
 |SDLK_F24
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F24)
+|the F24 key
 |-
 |SDLK_EXECUTE
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_EXECUTE)
+|the Execute key (special keyboards)
 |-
 |SDLK_HELP
 |SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_HELP)
