update content (incomplete)

--- a/SDL_Keycode.mediawiki
+++ b/SDL_Keycode.mediawiki
@@ -393,67 +393,64 @@ The SDL virtual key representation.
 |the F24 key
 |-
 |SDLK_EXECUTE
-|the Execute key (special keyboards)
+|the Execute key
 |-
 |SDLK_HELP
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_HELP)
+|the Help key
 |-
 |SDLK_MENU
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_MENU)
+|the Menu key
 |-
 |SDLK_SELECT
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_SELECT)
+|the Select key
 |-
 |SDLK_STOP
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_STOP)
+|the Stop key
 |-
 |SDLK_AGAIN
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_AGAIN)
+|the Again key
 |-
 |SDLK_UNDO
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_UNDO)
+|the Undo key
 |-
 |SDLK_CUT
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_CUT)
+|the Cut key
 |-
 |SDLK_COPY
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_COPY)
+|the Copy key
 |-
 |SDLK_PASTE
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_PASTE)
+|the Paste key
 |-
 |SDLK_FIND
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_FIND)
+|the Find key
 |-
 |SDLK_MUTE
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_MUTE)
+|the Mute key (multimedia keypad)
 |-
 |SDLK_VOLUMEUP
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_VOLUMEUP)
+|the Volume Up key (multimedia keypad)
 |-
 |SDLK_VOLUMEDOWN
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_VOLUMEDOWN)
+|the Volume Down key (multimedia keypad)
 |-
 |SDLK_KP_COMMA
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_COMMA)
+|the Comma key (number keypad ???)
 |-
 |SDLK_KP_EQUALSAS400
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_EQUALSAS400)
-|-
-|
-|
+|the Equals AS400 key
 |-
 |SDLK_ALTERASE
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_ALTERASE)
+|the Alt Erase key
 |-
 |SDLK_SYSREQ
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_SYSREQ)
+|the SysReq key
 |-
 |SDLK_CANCEL
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_CANCEL)
+|the Cancel key
 |-
 |SDLK_CLEAR
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_CLEAR)
+|the Clear key
 |-
 |SDLK_PRIOR
 |SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_PRIOR)
