--- a/SDL_Scancode.mediawiki
+++ b/SDL_Scancode.mediawiki
@@ -254,149 +254,500 @@ An enumeration of the SDL keyboard scancode representation.
 |SDL_SCANCODE_NUMLOCKCLEAR
 |83; num lock on PC, clear on Mac keyboards
 |-
-|value
-|description
+|SDL_SCANCODE_KP_DIVIDE
+|84
 |-
-|value
-|description
+|SDL_SCANCODE_KP_MULTIPLY
+|85
 |-
-|value
-|description
+|SDL_SCANCODE_KP_MINUS
+|86
 |-
-|value
-|description
+|SDL_SCANCODE_KP_PLUS
+|87
 |-
-|value
-|description
+|SDL_SCANCODE_KP_ENTER
+|88
 |-
-|value
-|description
+|SDL_SCANCODE_KP_1
+|89
 |-
-|value
-|description
+|SDL_SCANCODE_KP_2
+|90
 |-
-|value
-|description
+|SDL_SCANCODE_KP_3
+|91
 |-
-|value
-|description
+|SDL_SCANCODE_KP_4
+|92
 |-
-|value
-|description
+|SDL_SCANCODE_KP_5
+|93
 |-
-|value
-|description
+|SDL_SCANCODE_KP_6
+|94
 |-
-|value
-|description
+|SDL_SCANCODE_KP_7
+|95
 |-
-|value
-|description
+|SDL_SCANCODE_KP_8
+|96
 |-
-|value
-|description
+|SDL_SCANCODE_KP_9
+|97
 |-
-|value
-|description
+|SDL_SCANCODE_KP_0
+|98
 |-
-|value
-|description
+|SDL_SCANCODE_KP_PERIOD
+|99
 |-
-|value
-|description
+|SDL_SCANCODE_NONUSBACKSLASH
+|100; This is the additional key that ISO keyboards have over ANSI ones, located between left shift and Y. Produces GRAVE ACCENT and TILDE in a US or UK Mac layout, REVERSE SOLIDUS (backslash) and VERTICAL LINE in a US or UK Windows layout, and LESS-THAN SIGN and GREATER-THAN SIGN in a Swiss German, German, or French layout.
 |-
-|value
-|description
+|SDL_SCANCODE_APPLICATION
+|101; windows contextual menu, compose
 |-
-|value
-|description
+|SDL_SCANCODE_POWER
+|102; The USB document says this is a status flag, not a physical key - but some Mac keyboards do have a Power key.
 |-
-|value
-|description
+|SDL_SCANCODE_KP_EQUALS
+|103
 |-
-|value
-|description
+|SDL_SCANCODE_F13
+|104
 |-
-|value
-|description
+|SDL_SCANCODE_F14
+|105
 |-
-|value
-|description
+|SDL_SCANCODE_F15
+|106
 |-
-|value
-|description
+|SDL_SCANCODE_F16
+|107
 |-
-|value
-|description
+|SDL_SCANCODE_F17
+|108
 |-
-|value
-|description
+|SDL_SCANCODE_F18
+|109
 |-
-|value
-|description
+|SDL_SCANCODE_F19
+|110
 |-
-|value
-|description
+|SDL_SCANCODE_F20
+|111
 |-
-|value
-|description
+|SDL_SCANCODE_F21
+|112
 |-
-|value
-|description
+|SDL_SCANCODE_F22
+|113
 |-
-|value
-|description
+|SDL_SCANCODE_F23
+|114
 |-
-|value
-|description
+|SDL_SCANCODE_F24
+|115
 |-
-|value
-|description
+|SDL_SCANCODE_EXECUTE
+|116
 |-
-|value
-|description
+|SDL_SCANCODE_HELP
+|117
 |-
-|value
-|description
+|SDL_SCANCODE_MENU
+|118
 |-
-|value
-|description
+|SDL_SCANCODE_SELECT
+|119
 |-
-|value
-|description
+|SDL_SCANCODE_STOP
+|120
 |-
-|value
-|description
+|SDL_SCANCODE_AGAIN
+|121; redo
 |-
-|value
-|description
+|SDL_SCANCODE_UNDO
+|122
 |-
-|value
-|description
+|SDL_SCANCODE_CUT
+|123
 |-
-|value
-|description
+|SDL_SCANCODE_COPY
+|124
 |-
-|value
-|description
+|SDL_SCANCODE_PASTE
+|125
 |-
-|value
-|description
+|SDL_SCANCODE_FIND
+|126
 |-
-|value
-|description
+|SDL_SCANCODE_MUTE
+|127
 |-
-|value
-|description
+|SDL_SCANCODE_VOLUMEUP
+|128
 |-
-|value
-|description
+|SDL_SCANCODE_VOLUMEDOWN
+|129
 |-
-|value
-|description
+|SDL_SCANCODE_LOCKINGCAPSLOCK
+|130; not sure whether there's a reason to enable this
 |-
-|value
-|description
+|SDL_SCANCODE_LOCKINGNUMLOCK
+|131; not sure whether there's a reason to enable this
+|-
+|SDL_SCANCODE_LOCKINGSCROLLLOCK
+|132; not sure whether there's a reason to enable this
+|-
+|SDL_SCANCODE_KP_COMMA
+|133
+|-
+|SDL_SCANCODE_KP_EQUALSAS400
+|134
+|-
+|SDL_SCANCODE_INTERNATIONAL1
+|135; used on Asian keyboards, see footnotes in USB doc
+|-
+|SDL_SCANCODE_INTERNATIONAL2
+|136
+|-
+|SDL_SCANCODE_INTERNATIONAL3
+|137; Yen
+|-
+|SDL_SCANCODE_INTERNATIONAL4
+|138
+|-
+|SDL_SCANCODE_INTERNATIONAL5
+|139
+|-
+|SDL_SCANCODE_INTERNATIONAL6
+|140
+|-
+|SDL_SCANCODE_INTERNATIONAL7
+|141
+|-
+|SDL_SCANCODE_INTERNATIONAL8
+|142
+|-
+|SDL_SCANCODE_INTERNATIONAL9
+|143
+|-
+|SDL_SCANCODE_LANG1
+|144; Hangul/English toggle
+|-
+|SDL_SCANCODE_LANG2
+|145; Hanja conversion
+|-
+|SDL_SCANCODE_LANG3
+|146; Katakana
+|-
+|SDL_SCANCODE_LANG4
+|147; Hiragana
+|-
+|SDL_SCANCODE_LANG5
+|148; Zenkaku/Hankaku
+|-
+|SDL_SCANCODE_LANG6
+|149; reserved
+|-
+|SDL_SCANCODE_LANG7
+|150; reserved
+|-
+|SDL_SCANCODE_LANG8
+|151; reserved
+|-
+|SDL_SCANCODE_LANG9
+|152; reserved
+|-
+|SDL_SCANCODE_ALTERASE
+|153; Erase-Eaze
+|-
+|SDL_SCANCODE_SYSREQ
+|154
+|-
+|SDL_SCANCODE_CANCEL
+|155
+|-
+|SDL_SCANCODE_CLEAR
+|156
+|-
+|SDL_SCANCODE_PRIOR
+|157
+|-
+|SDL_SCANCODE_RETURN2
+|158
+|-
+|SDL_SCANCODE_SEPARATOR
+|159
+|-
+|SDL_SCANCODE_OUT
+|160
+|-
+|SDL_SCANCODE_OPER
+|161
+|-
+|SDL_SCANCODE_CLEARAGAIN
+|162
+|-
+|SDL_SCANCODE_CRSEL
+|163
+|-
+|SDL_SCANCODE_EXSEL
+|164
+|-
+|SDL_SCANCODE_KP_00
+|176
+|-
+|SDL_SCANCODE_KP_000
+|177
+|-
+|SDL_SCANCODE_THOUSANDSSEPARATOR
+|178
+|-
+|SDL_SCANCODE_DECIMALSEPARATOR
+|179
+|-
+|SDL_SCANCODE_CURRENCYUNIT
+|180
+|-
+|SDL_SCANCODE_CURRENCYSUBUNIT
+|181
+|-
+|SDL_SCANCODE_KP_LEFTPAREN
+|182
+|-
+|SDL_SCANCODE_KP_RIGHTPAREN
+|183
+|-
+|SDL_SCANCODE_KP_LEFTBRACE
+|184
+|-
+|SDL_SCANCODE_KP_RIGHTBRACE
+|185
+|-
+|SDL_SCANCODE_KP_TAB
+|186
+|-
+|SDL_SCANCODE_KP_BACKSPACE
+|187
+|-
+|SDL_SCANCODE_KP_A
+|188
+|-
+|SDL_SCANCODE_KP_B
+|189
+|-
+|SDL_SCANCODE_KP_C
+|190
+|-
+|SDL_SCANCODE_KP_D
+|191
+|-
+|SDL_SCANCODE_KP_E
+|192
+|-
+|SDL_SCANCODE_KP_F
+|193
+|-
+|SDL_SCANCODE_KP_XOR
+|194
+|-
+|SDL_SCANCODE_KP_POWER
+|195
+|-
+|SDL_SCANCODE_KP_PERCENT
+|196
+|-
+|SDL_SCANCODE_KP_LESS
+|197
+|-
+|SDL_SCANCODE_KP_GREATER
+|198
+|-
+|SDL_SCANCODE_KP_AMPERSAND
+|199
+|-
+|SDL_SCANCODE_KP_DBLAMPERSAND
+|200
+|-
+|SDL_SCANCODE_KP_VERTICALBAR
+|201
+|-
+|SDL_SCANCODE_KP_DBLVERTICALBAR
+|202
+|-
+|SDL_SCANCODE_KP_COLON
+|203
+|-
+|SDL_SCANCODE_KP_HASH
+|204
+|-
+|SDL_SCANCODE_KP_SPACE
+|205
+|-
+|SDL_SCANCODE_KP_AT
+|206
+|-
+|SDL_SCANCODE_KP_EXCLAM
+|207
+|-
+|SDL_SCANCODE_KP_MEMSTORE
+|208
+|-
+|SDL_SCANCODE_KP_MEMRECALL
+|209
+|-
+|SDL_SCANCODE_KP_MEMCLEAR
+|210
+|-
+|SDL_SCANCODE_KP_MEMADD
+|211
+|-
+|SDL_SCANCODE_KP_MEMSUBTRACT
+|212
+|-
+|SDL_SCANCODE_KP_MEMMULTIPLY
+|213
+|-
+|SDL_SCANCODE_KP_MEMDIVIDE
+|214
+|-
+|SDL_SCANCODE_KP_PLUSMINUS
+|215
+|-
+|SDL_SCANCODE_KP_CLEAR
+|216
+|-
+|SDL_SCANCODE_KP_CLEARENTRY
+|217
+|-
+|SDL_SCANCODE_KP_BINARY
+|218
+|-
+|SDL_SCANCODE_KP_OCTAL
+|219
+|-
+|SDL_SCANCODE_KP_DECIMAL
+|220
+|-
+|SDL_SCANCODE_KP_HEXADECIMAL
+|221
+|-
+|SDL_SCANCODE_LCTRL
+|224
+|-
+|SDL_SCANCODE_LSHIFT
+|225
+|-
+|SDL_SCANCODE_LALT
+|226; alt (Windows) / option (Mac) ???
+|-
+|SDL_SCANCODE_LGUI
+|227; windows, command (apple), meta ???
+|-
+|SDL_SCANCODE_RCTRL
+|228
+|-
+|SDL_SCANCODE_RSHIFT
+|229
+|-
+|SDL_SCANCODE_RALT
+|230; alt gr, option ???
+|-
+|SDL_SCANCODE_RGUI
+|231; windows, command (apple), meta ???
+|-
+|SDL_SCANCODE_MODE
+|257; I'm not sure if this is really not covered by any of the above, but since there's a special KMOD_MODE for it I'm adding it here
+|-
+|
+|''These values are mapped from usage page 0x0C (USB consumer page).''
+|-
+|SDL_SCANCODE_AUDIONEXT
+|258
+|-
+|SDL_SCANCODE_AUDIOPREV
+|259
+|-
+|SDL_SCANCODE_AUDIOSTOP
+|260
+|-
+|SDL_SCANCODE_AUDIOPLAY
+|261
+|-
+|SDL_SCANCODE_AUDIOMUTE
+|262
+|-
+|SDL_SCANCODE_MEDIASELECT
+|263
+|-
+|SDL_SCANCODE_WWW
+|264
+|-
+|SDL_SCANCODE_MAIL
+|265
+|-
+|SDL_SCANCODE_CALCULATOR
+|266
+|-
+|SDL_SCANCODE_COMPUTER
+|267
+|-
+|SDL_SCANCODE_AC_SEARCH
+|268
+|-
+|SDL_SCANCODE_AC_HOME
+|269
+|-
+|SDL_SCANCODE_AC_BACK
+|270
+|-
+|SDL_SCANCODE_AC_FORWARD
+|271
+|-
+|SDL_SCANCODE_AC_STOP
+|272
+|-
+|SDL_SCANCODE_AC_REFRESH
+|273
+|-
+|SDL_SCANCODE_AC_BOOKMARKS
+|274
+|-
+|
+|''These are values that Christian Walther added (for mac keyboard?).''
+|-
+|SDL_SCANCODE_BRIGHTNESSDOWN
+|275
+|-
+|SDL_SCANCODE_BRIGHTNESSUP
+|276
+|-
+|SDL_SCANCODE_DISPLAYSWITCH
+|277; display mirroring/dual display switch, video mode switch
+|-
+|SDL_SCANCODE_KBDILLUMTOGGLE
+|278
+|-
+|SDL_SCANCODE_KBDILLUMDOWN
+|279
+|-
+|SDL_SCANCODE_KBDILLUMUP
+|280
+|-
+|SDL_SCANCODE_EJECT
+|281
+|-
+|SDL_SCANCODE_SLEEP
+|282
+|-
+|
+|''Other''
+|-
+|SDL_NUM_SCANCODES
+|512; not a key, just marks the number of scancodes for array bounds
 |}
 
 == Code Examples ==
