--- a/SDL_Keymod.mediawiki
+++ b/SDL_Keymod.mediawiki
@@ -9,40 +9,40 @@ An enumeration of key modifier masks.
 == Values ==
 {|
 |KMOD_NONE
-|0
+|0 (no modifier is applicable)
 |-
 |KMOD_LSHIFT
-|the left Shift key
+|the left Shift key is down
 |-
 |KMOD_RSHIFT
-|the right Shift key
+|the right Shift key is down
 |-
 |KMOD_LCTRL
-|the left Ctrl (Control) key
+|the left Ctrl (Control) key is down
 |-
 |KMOD_RCTRL
-|the right Ctrl (Control) key
+|the right Ctrl (Control) key is down
 |-
 |KMOD_LALT
-|the left Alt key
+|the left Alt key is down
 |-
 |KMOD_RALT
-|the right Alt key
+|the right Alt key is down
 |-
 |KMOD_LGUI
-|the left GUI key (often the Windows key)
+|the left GUI key (often the Windows key) is down
 |-
 |KMOD_RGUI
-|the right GUI key (often the Windows key)
+|the right GUI key (often the Windows key) is down
 |-
 |KMOD_NUM
-|the Num Lock key (may be located on an extended keypad)
+|the Num Lock key (may be located on an extended keypad) is down
 |-
 |KMOD_CAPS
-|the Caps Lock key
+|the Caps Lock key is down
 |-
 |KMOD_MODE
-|the !AltGr key
+|the !AltGr key is down
 |-
 |<style="color: #808080;">KMOD_RESERVED
 |<style="color: #808080;">reserved for future use
