--- a/SDL_ReadLE32.mediawiki
+++ b/SDL_ReadLE32.mediawiki
@@ -18,7 +18,7 @@ Uint32 SDL_ReadLE32(SDL_RWops* src)
 |}
 
 == Return Value ==
-^Returns an unsigned 32-bit value equivalent to the little-endian value.^ ???
+^Returns a native 32-bit value equivalent to the little-endian value.^ ???
 
 == Code Examples ==
 ```c++
