--- a/SDL_RWFromMem.mediawiki
+++ b/SDL_RWFromMem.mediawiki
@@ -4,7 +4,6 @@
 
 = SDL_RWFromMem =
 Use this function to create an SDL_RWops structure from memory of a certain size.
-<<Color2(green,Currently no SDL_RWops page so no link.)>>
 
 
 == Syntax ==
@@ -26,6 +25,7 @@ SDL_RWops* SDL_RWFromMem(void* mem,
 A pointer to the SDL_RWops structure that is created, or NULL on failure.
 
 == Code Examples ==
+*
 ```c++
 char bitmap[310000];
 SDL_RWops *rw;
@@ -33,9 +33,10 @@ SDL_RWops *rw;
 rw = SDL_RWFromMem(bitmap, sizeof(bitmap));
 SDL_SaveBMP_RW(screen, rw, 0);
 ```
+*
 
 == Remarks ==
-If the memory is not writable, use [[SDL_RWFromConstMem]]() instead.
+* {i} NOTE: If the memory is not writable, use [[SDL_RWFromConstMem]]() instead.*
 
 == Related Functions ==
 :[[SDL_RWFromConstMem]] ???
